# amr

./: CMakeLists.txt  package.xml
config/: map_1.pgm  map_1.yaml  nav2_params.yaml
depth_camera_ros2_package/: CMakeLists.txt  package.xml
depth_camera_ros2_package/launch/: d405_launch.py  d435_launch.py  gazebo_simulation.launch.py  turtlebot_camera_integration.launch.py
depth_camera_ros2_package/rviz/: camera_visualization.rviz  simulated_camera_visualization.rviz
depth_camera_ros2_package/urdf/: turtlebot_with_camera.urdf  turtlebot_with_simulated_camera.urdf
depth_camera_ros2_package/worlds/: sample_environment.world
launch/: bot.launch.py  mapping.launch.py  navigation.launch.py  rplidar.launch.py  rsp.launch.py
meshes/: base_link.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
urdf/: diff_drive_plugin.xacro  lidar_plugin.xacro  materials.xacro  robot.trans  robot.xacro
worlds/: world_1
