<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>depth_camera_ros2_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="visishta@todo.todo">visishta</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>realsense2_camera</depend>
  <depend>rviz2</depend>
  <depend>gazebo_ros</depend>
  <depend>turtlebot_arm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
